--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -8,7 +8,7 @@ jobs:
     - name: echo a name
       run: echo "I am from Github Actions"
     - name: multiline script
-      run: |-
+      run: |
         echo "Printing versions of npm and node"
         node -v
         npm -v
