--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -3,12 +3,12 @@ on: push
 
 jobs:
   run-script:
-  runs-on: ubuntu-latest
-  steps:
-    - name: echo a name
-      run: echo "I am from Github Actions"
-    - name: multiline script
-      run: |
-        echo "Printing versions of npm and node"
-        node -v
-        npm -v
+    runs-on: ubuntu-latest
+    steps:
+      - name: echo a name
+        run: echo "I am from Github Actions"
+      - name: multiline script
+        run: |-
+          echo "Printing versions of npm and node"
+          node -v
+          npm -v
